--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1116,6 +1116,17 @@
             return item.time || 'TBD';
         }
 
+        // Helper to format ISO/UTC string to local HH:MM
+        function getLocalTime(item) {
+            if (item.start) {
+                try {
+                    const date = new Date(item.start.replace(' ', 'T') + 'Z');
+                    return date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', hour12: false });
+                } catch (e) { }
+            }
+            return item.time || 'TBD';
+        }
+
         function renderEventRow(group, isLive) {
             const item = group.event;
             const channels = group.channels;
